--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -28,3 +28,5 @@ jobs:
       # Runs a single command using the runners shell
       - name: Pull
         run: dir
+	run: cd "C:\Users\Administrator\Documents\Web Site"
+	run: git pull
