--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -27,6 +27,6 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Pull
-        run: dir
-	run: cd "C:\Users\Administrator\Documents\Web Site"
-	run: git pull
+      - run: dir
+	    - run: cd "C:\Users\Administrator\Documents\Web Site"
+	    - run: git pull
