--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -26,6 +26,7 @@ jobs:
       #- uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - run: dir
-  - run: cd "C:\Users\Administrator\Documents\Web Site"
-  - run: git pull
+      - name: Change dir
+  run: cd "C:\Users\Administrator\Documents\Web Site"
+  - name: Pull
+  run: git pull
