--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Get dir
         run: dir
       - name: Change dir
-        run: cd ".\Users\Administrator\Documents\Web Site"
+        run: cd "..\..\..\..\Users\Administrator\Documents\Web Site"
       - name: Pull
         run: git pull
