--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -11,7 +11,11 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
+      -name: Path
+      run: echo dir
       - name: CD
-      run: cd "C:\\Users\\Administrator\\Documents\\Web Site"
+      run: cd "C:\\Users\\Administrator\\Documents\\Web\ Site"
+      shell: cmd
       - name: Pull
       run: git pull
+      shell: cmd
